@@ -78,6 +78,13 @@ PKG_CHECK_MODULES(MUSICBRAINZ, libmusicbrainz >= 2.1.0)
 AC_SUBST(MUSICBRAINZ_CFLAGS)
 AC_SUBST(MUSICBRAINZ_LIBS)
 
+# Find the optional dependency libcdio
+PKG_CHECK_MODULES(CDIO, libcdio, HAVE_CDIO=yes, HAVE_CDIO=no)
+if test "x$HAVE_CDIO" = "xyes"; then
+        AM_CONDITIONAL(HAVE_CDIO, true)
+else
+        AC_MSG_WARN([libcdio not found, cannot get track names from CD-TEXT])
+fi
 
 # Find how and where to put the GConf schemas
 AC_PATH_PROG(GCONFTOOL, gconftool-2, no)
