@@ -1,5 +1,13 @@
 2005-10-03  Ross Burton  <ross@burtonini.com>
 
+	* configure.in:
+	* src/Makefile.am:
+	* src/sj-metadata-cdtext.c:
+	* src/sj-metadata-cdtext.h:
+	Add start of CD-TEXT metadata backend.
+
+2005-10-03  Ross Burton  <ross@burtonini.com>
+
 	* src/sj-main.c:
 	Add Funk to the genre list, to please Shaun (closes #314851).
 
